<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="text_pendaftaran_kelas">Pendaftaran Kelas</string>
    <string name="text_pilih_kurikulum">Pilih Kurikulum</string>
    <string name="text_tambah_pertemuan">Tambah Pertemuan</string>
    <string name="text_jadwal_pertemuan">Jadwal Pertemuan</string>
    <string name="text_kurikulum_param">Kurikulum</string>
    <string name="text_param_kali">2 Kali</string>
    <string name="text_jumlah_pertemuan">Jumlah Pertemuan</string>
    <string name="text_simpan">simpan</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_detail_lokasi_dan_waktu">Detail Lokasi dan Waktu</string>
    <string name="text_tanggal">Tanggal</string>
    <string name="text_nama_lokasi">Nama Lokasi</string>
</resources>