<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorRootBackground">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        tools:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dimens_16dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_detail_lokasi_dan_waktu"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/size_18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/dimens_16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_8dp"
                android:layout_marginBottom="@dimen/dimens_16dp">

                <TextView
                    android:id="@+id/labelTanggal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimens_4dp"
                    android:text="@string/text_tanggal"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/size_10sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/fieldTanggal"
                    style="@style/ClickableContent"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dimens_48dp"
                    android:layout_marginTop="@dimen/dimens_4dp"
                    android:layout_marginEnd="@dimen/dimens_16dp"
                    android:background="@drawable/background_spinner_primary"
                    android:gravity="center|start"
                    android:paddingStart="@dimen/dimens_8dp"
                    android:paddingEnd="@dimen/dimens_16dp"
                    app:layout_constraintEnd_toStartOf="@id/fieldTime"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/labelTanggal"
                    tools:text="Radhika Yusuf" />


                <TextView
                    android:id="@+id/labelTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="@dimen/dimens_4dp"
                    android:text="Waktu"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/size_10sp"
                    app:layout_constraintStart_toStartOf="@id/fieldTime"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/fieldTime"
                    style="@style/ClickableContent"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dimens_48dp"
                    android:layout_marginTop="@dimen/dimens_4dp"
                    android:background="@drawable/background_spinner_primary"
                    android:enabled="false"
                    android:gravity="center|start"
                    android:paddingStart="@dimen/dimens_8dp"
                    android:paddingEnd="@dimen/dimens_16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/fieldTanggal"
                    app:layout_constraintTop_toBottomOf="@id/labelTime" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/labelLokasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimens_4dp"
                android:text="@string/text_nama_lokasi"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/size_10sp" />

            <EditText
                android:id="@+id/fieldNamaLokasi"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimens_48dp"
                android:layout_marginTop="@dimen/dimens_4dp"
                android:layout_marginEnd="@dimen/dimens_16dp"
                android:layout_marginBottom="@dimen/dimens_16dp"
                android:background="@drawable/background_spinner_primary"
                android:imeOptions="actionNext"
                android:maxLength="20"
                android:paddingStart="@dimen/dimens_8dp"
                android:paddingEnd="@dimen/dimens_16dp" />

            <TextView
                android:id="@+id/labelDetailLokasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimens_4dp"
                android:text="Detail Alamat Lokasi"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/size_10sp" />

            <EditText
                android:id="@+id/fieldDetailLokasi"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimens_48dp"
                android:layout_marginTop="@dimen/dimens_4dp"
                android:layout_marginEnd="@dimen/dimens_16dp"
                android:background="@drawable/background_spinner_primary"
                android:imeOptions="actionDone"
                android:maxLength="60"
                android:paddingStart="@dimen/dimens_8dp"
                android:paddingEnd="@dimen/dimens_16dp" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true">

            <Button
                android:id="@+id/buttonSave"
                style="@style/ButtonPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/totalCost"
                android:enabled="false"
                android:layout_margin="@dimen/dimens_16dp"
                android:text="@string/text_simpan"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/size_14sp" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>